# virustotal-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEDUPLICATION_REPORT.md  DUPLICATION_ANALYSIS.md  MCP_CLI_USAGE_GUIDE.md  Makefile  README.md  SECURITY.md  TEST_UTILITIES_DOCUMENTATION.md  crates.js  deny.toml  docs-header.html  help.html  index.html  search-index.js  settings.html  src-files.js  supply-chain-report.txt  unsafe-report.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  docs.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  README.md  RELEASING.md
examples/: README_download_hashes.md  check_existing_comments.rs  download_hashes_from_file.rs  elasticsearch_indexer.rs  iterator_utilities_demo.rs  jwt_token_generator.rs  matching_files_helper.rs  mcp_http_server.rs  mcp_http_server_jwt.rs  mcp_http_server_oauth.rs  mcp_stdio_server.rs  oauth_client_test.rs  query_elasticsearch.rs  sample_hashes.txt  test_all_features.rs  test_attack_apis.rs  test_behavior_feeds.rs  test_behavior_report.rs  test_behavior_summary.rs  test_client_utilities.rs  test_collections.rs  test_comments.rs  test_comments_votes.rs  test_comments_votes_ratelimited.rs  test_common_utilities.rs  test_display_utilities.rs  test_domain_detailed.rs  test_domain_ip.rs  test_domain_ip_url_feeds.rs  test_feeds.rs  test_file.rs  test_file_analysis.rs  test_file_behaviours.rs  test_graph_permissions.rs  test_graphs.rs  test_livehunt.rs  test_mitre_attack.rs  test_private_analyses.rs  test_private_files.rs  test_private_urls.rs  (+9 more)
examples/common/: mod.rs
examples/private_files_modules/: analysis_operations.rs  constants.rs  display_utils.rs  file_operations.rs  management_operations.rs  mod.rs  upload_operations.rs
examples/test_graphs/: basic_operations.rs  comment_operations.rs  display_utils.rs  graph_data.rs  mod.rs  permission_operations.rs  relationship_operations.rs
mcp_server/: all.html  fn.create_virustotal_client.html  fn.determine_api_tier.html  fn.get_api_key.html  fn.initialize_logging.html  fn.log_http_server_info.html  fn.main.html  fn.run_http_mode.html  fn.run_server_by_mode.html  fn.run_stdio_mode.html  index.html  sidebar-items.js
search.desc/mcp_server/: mcp_server-desc-0-.js
search.desc/virustotal_rs/: virustotal_rs-desc-0-.js
search.desc/vt_cli/: vt_cli-desc-0-.js
search.index/: 000bca68868e.js  001bc74c2709.js  008df9d03d2d.js  009b12d37784.js  009c7295f695.js  00a94b7a2cdf.js  00f7aab4b5cb.js  010f9f10deea.js  0112ef906ea8.js  0123a3c6a021.js  0131c39916cc.js  0147cec1c394.js  016e40d2098f.js  01723bec7903.js  0187c5ab0d93.js  01a178d6d764.js  01cab1c532f4.js  01cc25f8693e.js  01ea9a1b44aa.js  021112090a6b.js  024c2f3f27de.js  025aa28568f6.js  02f5aee5517e.js  035000de190c.js  035adaedb6ec.js  036881c39623.js  037156b2206e.js  037b6ba77fe7.js  038b465196e3.js  0408bdc54ffa.js  0417ee0156e2.js  0434140276ce.js  04b72a3af959.js  0520d4383f53.js  0555a3b994da.js  056f082f862f.js  058a35f13bb7.js  05b3b078a397.js  05c421da0fda.js  063f622374fb.js  (+937 more)
search.index/crateNames/: 2abdcb81e7e6.js
search.index/desc/: d109af9a4acc.js
search.index/entry/: 45e4278be377.js  56cdf87d60f4.js  9a424436eee7.js  e21d2f5b9dcc.js
search.index/function/: 12bf75b3bd0e.js  ed13ee04a790.js
search.index/generic_inverted_index/: 8874a02e2cbb.js  cd1f4fc49ff2.js
search.index/name/: 6bc38a7c03a3.js  e810175adbc5.js
search.index/normalizedName/: 61405116831f.js  87f952bcff7d.js
search.index/path/: 2c05945de9ef.js  5bba2a1891ce.js
search.index/type/: 9022a8fdc81c.js  c19e470ba37f.js
src/: analysis.rs  attack_tactics.rs  attack_techniques.rs  auth.rs  client.rs  client_utils.rs  collections.rs  comments.rs  common.rs  crowdsourced_yara_rules.rs  display.rs  domains.rs  error.rs  feeds.rs  file_behaviours.rs  files.rs  graphs.rs  groups.rs  ioc_stream.rs  ip_addresses.rs  iterator_utils.rs  lib.rs  livehunt.rs  macros.rs  metadata.rs  objects.rs  popular_threat_categories.rs  private_files.rs  private_urls.rs  rate_limit.rs  references.rs  retrohunt.rs  search.rs  sigma_rules.rs  test_utils.rs  threat_actors.rs  url_utils.rs  urls.rs  users.rs  votes.rs  (+2 more)
src/cli/: config.rs  mod.rs  utils.rs
src/client_utils/: builder.rs  constants.rs  mod.rs  rate_limiting.rs  retry.rs  utils.rs
src/collections/: builder.rs  client.rs  descriptors.rs  enums.rs  requests.rs  tests.rs  types.rs
src/crypto/: api_key_encryption.rs  mod.rs
src/display/: formatting.rs  helpers.rs  implementations.rs  mod.rs  structured.rs  traits.rs  types.rs
src/error/: context.rs  implementation.rs  macros.rs  tests.rs  types.rs  utils.rs
src/feeds/: client.rs  mod.rs  types.rs  utilities.rs
src/file_behaviours/: client.rs  mod.rs  types.rs
src/files/: behavior.rs  client.rs  mitre.rs  network.rs  tests.rs  types.rs
tests/: cli_encryption_test.rs  domain_tests.rs  file_basic_operations_tests.rs  file_comments_votes_tests.rs  file_relationships_simplified_tests.rs  file_tests.rs  file_utility_simplified_tests.rs  integration_tests.rs  new_tests.rs  refactored_complexity_tests.rs  vote_tests.rs
virustotal_rs/: all.html  index.html  macro.bail_if!.html  macro.bail_if.html  macro.context.html  macro.create_lookup_table!.html  macro.create_lookup_table.html  macro.ensure.html  macro.impl_common_client_methods!.html  macro.impl_common_client_methods.html  macro.impl_enum_display!.html  macro.impl_enum_display.html  macro.impl_enum_string_conversion!.html  macro.impl_enum_string_conversion.html  macro.impl_enum_to_string!.html  macro.impl_enum_to_string.html  macro.map_err_context!.html  macro.map_err_context.html  sidebar-items.js
vt-dashboard/: README.md  TESTING_README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
vt_cli/: all.html  fn.main.html  index.html
(+1116 files in other folders)
