[package]
name = "virustotal-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
authors = ["ThreatFlux"]
description = "Rust SDK for VirusTotal API v3"
repository = "https://github.com/threatflux/virustotal-rs"
license = "MIT OR Apache-2.0"
keywords = ["virustotal", "api", "security", "malware", "threat-intelligence"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "fs"] }
thiserror = "2.0.15"
async-trait = "0.1.89"
url = "2.5.4"
chrono = "0.4.41"
governor = "0.10.1"
nonzero_ext = "0.3"
base64 = "0.22.1"
sha2 = "0.10.9"
urlencoding = "2.1.3"

# MCP feature dependencies (optional)
axum = { version = "0.7", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
anyhow = { version = "1.0", optional = true }
regex = { version = "1.10", optional = true }
lazy_static = { version = "1.4", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# JWT authentication dependencies (optional)
jsonwebtoken = { version = "9.3", optional = true }
serde_with = { version = "3.9", optional = true }
uuid = { version = "1.10", features = ["v4", "serde"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }

# OAuth 2.1 authentication dependencies (optional)
oauth2 = { version = "4.4", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = []
mcp = ["axum", "tokio-util", "anyhow", "regex", "lazy_static", "tracing", "tracing-subscriber"]
mcp-jwt = ["mcp", "jsonwebtoken", "serde_with", "uuid", "tower", "tower-http", "axum-extra"]
mcp-oauth = ["mcp", "oauth2", "rand", "uuid", "tower", "tower-http", "axum-extra"]

[dev-dependencies]
tokio-test = "0.4.4"
mockito = "1.7.0"
wiremock = "0.6.4"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
