[package]
name = "virustotal-rs"
version = "0.4.6"
edition = "2024"
rust-version = "1.94.0"
authors = ["ThreatFlux"]
description = "Rust SDK for VirusTotal API v3"
repository = "https://github.com/ThreatFlux/virustotal-rs"
license = "MIT OR Apache-2.0"
keywords = ["virustotal", "api", "security", "malware", "threat-intelligence"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"
homepage = "https://github.com/ThreatFlux/virustotal-rs"
documentation = "https://docs.rs/virustotal-rs"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[[bin]]
name = "vt-cli"
path = "src/bin/vt-cli.rs"
required-features = ["cli"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "form", "rustls", "multipart"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time", "fs", "io-std"] }
tokio-stream = "0.1.18"
thiserror = "2.0.18"
async-trait = "0.1.89"
url = "2.5.8"
chrono = "0.4.44"
governor = "0.10.4"
nonzero_ext = "0.3"
base64 = "0.22.1"
sha2 = "0.11.0"
urlencoding = "2.1.3"

# MCP feature dependencies (optional)
axum = { version = "0.8.8", optional = true }
tokio-util = { version = "0.7.18", features = ["io"], optional = true }
anyhow = { version = "1.0.102", optional = true }
regex = { version = "1.12.3", optional = true }
lazy_static = { version = "1.5.0", optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"], optional = true }

# JWT authentication dependencies (optional)
# The MCP JWT flow only uses HMAC signing, so avoid pulling the RustCrypto RSA stack.
jsonwebtoken = { version = "10.3.0", optional = true, default-features = false, features = ["aws_lc_rs"] }
serde_with = { version = "3.18.0", optional = true }
uuid = { version = "1.23.0", features = ["v4", "serde"], optional = true }
tower = { version = "0.5.3", features = ["util"], optional = true }
tower-http = { version = "0.6.8", features = ["cors", "trace"], optional = true }
axum-extra = { version = "0.12.5", features = ["typed-header"], optional = true }

# OAuth 2.1 authentication dependencies (optional)
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest", "rustls-tls"], optional = true }
rand = { version = "0.10.0", optional = true }

# CLI dependencies (optional)
clap = { version = "4.6.0", features = ["derive", "env"], optional = true }
colored = { version = "3.1.1", optional = true }
indicatif = { version = "0.18.4", optional = true }
dirs = { version = "6.0.0", optional = true }
toml = { version = "1.1.0", optional = true }
elasticsearch = { version = "9.1.0-alpha.1", optional = true }
futures = { version = "0.3.32", optional = true }

[features]
default = []
cli = ["clap", "colored", "indicatif", "dirs", "toml", "elasticsearch", "futures", "anyhow", "regex"]
mcp = ["axum", "tokio-util", "anyhow", "regex", "lazy_static", "tracing", "tracing-subscriber"]
mcp-jwt = ["mcp", "jsonwebtoken", "serde_with", "uuid", "tower", "tower-http", "axum-extra"]
mcp-oauth = ["mcp", "oauth2", "rand", "uuid", "tower", "tower-http", "axum-extra"]

[dev-dependencies]
tokio-test = "0.4.5"
mockito = "1.7.2"
wiremock = "0.6.5"
clap = { version = "4.6.0", features = ["derive"] }
tempfile = "3.27.0"
futures = "0.3.32"
uuid = { version = "1.23.0", features = ["v4"] }

[[example]]
name = "elasticsearch_indexer"
required-features = ["cli"]

[[example]]
name = "query_elasticsearch"
required-features = ["cli"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
